cmake_minimum_required(VERSION 2.8.8...3.20.0)
cmake_policy(SET CMP0048 NEW)
project(monarch-drivers VERSION 2.0.0)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if (NOT DEFINED monarch_SOURCE_DIR)
if (${CMAKE_CROSSCOMPILING})
  link_directories( ${CMAKE_STAGING_PREFIX}/lib )
  include_directories( ${CMAKE_STAGING_PREFIX}/include )
else (${CMAKE_CROSSCOMPILING})
  link_directories( /usr/local/lib )
  include_directories( /usr/local/include )
endif (${CMAKE_CROSSCOMPILING})
endif (NOT DEFINED monarch_SOURCE_DIR)

add_subdirectory(subbus)
add_subdirectory(tmdf)
add_subdirectory(TMbase)
add_subdirectory(alicat)
add_subdirectory(Agilent)
add_subdirectory(dccc)
add_subdirectory(sspdrv)
add_subdirectory(QCLI/qclicomp)
add_subdirectory(QCLI/qcliutil)
add_subdirectory(DACS)
add_subdirectory(meerstetter)

