cmake_minimum_required(VERSION 2.8.8...3.20.0)
cmake_policy(SET CMP0048 NEW)
project(monarch_tools VERSION 2.0.0)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_definitions( -D_POSIX_SOURCE=1 -D_XOPEN_SOURCE=500 )

add_subdirectory(cmdgen)
add_subdirectory(mkexp)
add_subdirectory(oui/src)
add_subdirectory(setup)
add_subdirectory(tmc)
add_subdirectory(tmcalgo)
add_subdirectory(table)
add_subdirectory(util)
