cmake_minimum_required(VERSION 2.8.8...3.20.0)
cmake_policy(SET CMP0048 NEW)
project(monarch_utils VERSION 2.0.0)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_definitions( -D_POSIX_SOURCE=1 -D_XOPEN_SOURCE=500 )

add_subdirectory(bfr)
add_subdirectory(comms)
add_subdirectory(monarchctl)
add_subdirectory(flight)
add_subdirectory(getcon)
add_subdirectory(lgr)
add_subdirectory(memo)
add_subdirectory(monarch_cmd)
add_subdirectory(parent)
add_subdirectory(rdr)
add_subdirectory(playback)
add_subdirectory(tmdiag)
